fix wrapView css

--- a/css/wrapView.css
+++ b/css/wrapView.css
@@ -2,7 +2,6 @@ a {
     text-decoration: none;
 }
 #container{font-family: 'noto_l';}
-
 .content_wrap{
     text-align: center;
     width: 100%;
@@ -153,6 +152,7 @@ a {
     background-position: 0% -80px;
 }
 
+
 .menuView_wrap .menu_header .name{
     color: #292929;
     font-size: 50px;
@@ -177,6 +177,7 @@ a {
     padding-left: 20px;
     margin-left: 17px;
     position: relative;
+    font-family: 'sw_s';
 }
 .menuView_wrap .menu_header ul .kcal::after{
     content: '';
@@ -229,6 +230,7 @@ a {
     z-index: 100;
     position: relative;
 }
+
 .menu_info .next{
     right: 0;
     text-align: right;
@@ -290,6 +292,7 @@ a {
     color: #999999;
     line-height: 26px;
     margin-top: 24px;
+    font-family: 'noto_dl';
 }
 
 .stuff{
@@ -333,11 +336,14 @@ a {
     font-size: 13px;
     letter-spacing: -0.05em;
     line-height: 1.6;
+    font-family: 'noto_dl';
 }
+
 .caution ul li a{
-    color: #333;
-    text-decoration: underline;
     font-size: 13px;
+    letter-spacing: -0.05em;
+    font-family: 'noto_dl';
+    text-decoration: underline;
 }
 .caution p{
     color: #999;
@@ -345,6 +351,7 @@ a {
     letter-spacing: -0.05em;
     margin-top: 10px;
     line-height: 1.6;
+    font-family: 'noto_dl';
 }
 
 .Nutrition_label{
@@ -366,6 +373,7 @@ a {
     letter-spacing: -0.05em;
     margin-bottom: 37px;
 }
+
 .Nutrition_label .Nutrition_content table{
     border-top: 4px solid #009223;
     width: 100%;
@@ -396,12 +404,11 @@ a {
     letter-spacing: -0.05em;
     text-align: left;
     margin-top: 8px;
-    font-weight: bold;
+    font-family: 'noto_dl';
 }
 .board_wrap .board_notice li:first-child{
     margin-top: 0;
 }
-
 .button_wrap{
     position: absolute;
     right: 0;
@@ -417,9 +424,6 @@ a {
     vertical-align: middle;
     border-radius: 30px;
 }
-.button_wrap .btn:hover{
-    background-color: #292929;
-}
 
 .button_wrap .btn span{
     color: #fff;
@@ -427,11 +431,15 @@ a {
     height: 40px;
     line-height: 40px;
 }
-
+.button_wrap .btn:hover{
+    background-color: #292929;
+    transition-duration: 2s;
+}
 .three_fresh{
     margin: 97px auto 121px;
     width: 1170px;
 }
+
 .three_fresh .fresh_header{
     margin: 0 auto;
     width: 1170px;
@@ -461,14 +469,12 @@ a {
 }
 
 .three_fresh .fresh_content{
-    margin-top: 60px;
-    position: relative;
+    margin:0 auto;
 }
 .three_fresh .fresh_content ul{
     overflow: hidden;
     font-size: 0;
 }
-
 .three_fresh .fresh_content ul li{
     width: 370px;
     height: 390px;
@@ -564,6 +570,7 @@ a {
 }
 .list_btn_wrap .list_btn a:hover{
     background-color: #00811f;
+    transition-duration: 2s;
 }
 .list_btn_wrap .list_btn span{
     width: 20px;
@@ -584,7 +591,6 @@ a {
     top: 30px;
     left: 30px;
 }
-
 /* 팝업 배경 */
 .popUp_back{
     display: none;
@@ -600,9 +606,9 @@ a {
 /* 원산지 정보 팝업 */
 .contry_popUp{
     display: none;
-    font-family: 'sw_s';
+    font-family: 'noto_dl';
     position: fixed;
-    top: 10%;
+    top: 3%;
     left: 30%;
     width: 630px;
     height: 680px;
@@ -619,6 +625,7 @@ a {
     text-align: center;
     letter-spacing: -0.045em;
     padding: 35px 0 29px;
+    font-family: 'noto_l';
 }
 
 .contry_popUp .popUp_content{
@@ -692,10 +699,10 @@ a {
 /* 알레르기 정보 팝업 */
 .allergy_popUp{
     display: none;
-    font-family: 'sw_s';
+    font-family: 'noto_dl';
     position: fixed;
-    top: 10%;
-    left: 25%;
+    top: 3%;
+    left: 20%;
     width: 900px;
     height: 680px;
     background-color: #ffc300;
@@ -711,6 +718,7 @@ a {
     text-align: center;
     letter-spacing: -0.045em;
     padding: 35px 0 29px;
+    font-family: 'noto_l';
 }
 
 .allergy_popUp .popUp_content{
